<resources>
    <string name="app_name">Calculator--</string>

    <string name="action_simple_mode">Simple Mode</string>
    <string name="action_scientific_mode">Scientific Mode</string>
    <string name="action_programmer_mode">Programmer Mode</string>
    <string name="action_programmer_mode_dez">DEZ Input</string>
    <string name="action_programmer_mode_bin">BIN Input</string>
    <string name="action_programmer_mode_hex">HEX Input</string>

</resources>
